testdata/baselines/reference/submodule/compiler/parenthesizedJSDocCastAtReturnStatement.errors.txt
index.js(9,3): error TS2322: Type '() => string | Set<string> | undefined' is not assignable to type '() => string'.
  Type 'string | Set<string> | undefined' is not assignable to type 'string'.
    Type 'undefined' is not assignable to type 'string'.


==== index.js (1 errors) ====
    /** @type {Map<string, string | Set<string>>} */
    const cache = new Map()
    
    /**
     * @param {string} key
     * @returns {() => string}
     */
    const getStringGetter = (key) => {
      return () => {
      ~~~~~~
!!! error TS2322: Type '() => string | Set<string> | undefined' is not assignable to type '() => string'.
!!! error TS2322:   Type 'string | Set<string> | undefined' is not assignable to type 'string'.
!!! error TS2322:     Type 'undefined' is not assignable to type 'string'.
        return /** @type {string} */ (cache.get(key))
      }
    }
    